// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-iyvyFf iTkFkl"
    >
      <div
        class="sc-hwwEjo cPpjPY"
      >
        <div
          class="sc-jtRfpW kaiGPi"
        >
          <a
            class="sc-kTUwUJ ijPJJc"
          >
            <img
              class="sc-dqBHgY ezKxht"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-gxMtzJ fEeBIz"
          >
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-dfVpRl foeOrh"
            />
          </div>
        </div>
        <div
          class="sc-kPVwWT iEyyyl"
        >
          <h1
            class="sc-kfGgVZ hlkEnZ"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP kVntkR"
    >
      <div
        class="sc-cMljjf LeglO"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Cookie M
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            Cookie master
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Count van Count
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            1 ahahah
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-iyvyFf iTkFkl"
    >
      <div
        class="sc-hwwEjo cPpjPY"
      >
        <div
          class="sc-jtRfpW kaiGPi"
        >
          <a
            class="sc-kTUwUJ ijPJJc"
          >
            <img
              class="sc-dqBHgY ezKxht"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-gxMtzJ fEeBIz"
          >
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-dfVpRl foeOrh"
            />
          </div>
        </div>
        <div
          class="sc-kPVwWT iEyyyl"
        >
          <h1
            class="sc-kfGgVZ hlkEnZ"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP kVntkR"
    >
      <div
        class="sc-cMljjf LeglO"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Count van Count
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            1 ahahah
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-iyvyFf iTkFkl"
    >
      <div
        class="sc-hwwEjo cPpjPY"
      >
        <div
          class="sc-jtRfpW kaiGPi"
        >
          <a
            class="sc-kTUwUJ ijPJJc"
          >
            <img
              class="sc-dqBHgY ezKxht"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-gxMtzJ fEeBIz"
          >
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-dfVpRl foeOrh"
            />
          </div>
        </div>
        <div
          class="sc-kPVwWT iEyyyl"
        >
          <h1
            class="sc-kfGgVZ hlkEnZ"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP kVntkR"
    >
      <div
        class="sc-cMljjf LeglO"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Cookie M
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            Cookie master
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-iyvyFf iTkFkl"
    >
      <div
        class="sc-hwwEjo cPpjPY"
      >
        <div
          class="sc-jtRfpW kaiGPi"
        >
          <a
            class="sc-kTUwUJ ijPJJc"
          >
            <img
              class="sc-dqBHgY ezKxht"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-gxMtzJ fEeBIz"
          >
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-gzOgki dsuNbc"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-dfVpRl foeOrh"
            />
          </div>
        </div>
        <div
          class="sc-kPVwWT iEyyyl"
        >
          <h1
            class="sc-kfGgVZ hlkEnZ"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP kVntkR"
    >
      <div
        class="sc-cMljjf LeglO"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Cookie M
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            Cookie master
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eXEjpC hfOjGA"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-esjQYD cQpliv"
          >
            Count van Count
          </div>
          <div
            class="sc-kIPQKe hanGFu"
          >
            1 ahahah
          </div>
          <div
            class="sc-ibxdXY fWCzmx"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
